# tokio-tls-example

./: README.md
certs/: Cargo.toml
certs/src/: lib.rs
client/: Cargo.toml
client/src/: main.rs
keys/: Ed25519_pair_key.pem  Ed25519_private_key.pem  eddsa-ca.cert
server/: Cargo.toml
server/src/: main.rs
websocket-client/: Cargo.toml
websocket-client/src/: main.rs
