[package]
name = "websocket-client"
version = "0.1.0"
edition = "2018"
authors = ["Michał Hanusek <mhanusek@o2.pl>"]

[dependencies]
certs = { path = "../certs" }
tokio = { version = "=1.21.2", features = ["full"] }
tokio-util = { version = "=0.7.4", features = ["full"]} 
tokio-rustls = { version = "=0.23.4", features=["dangerous_configuration"] }
tokio-tungstenite = { version = "0.18.0", features = ["rustls-tls-native-roots"] }
async-tungstenite = { version = "0.19.0", features = ["tokio", "tokio-rustls-native-certs"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3.1", default-features = false, features = ["fmt", "ansi", "env-filter", "tracing-log"] }
futures = "0.3.21"
futures-util = "0.3.25"
url = "2.0.0"
futures-channel = "0.3"

